--- a/src/styles/components/_catalog-tools.scss
+++ b/src/styles/components/_catalog-tools.scss
@@ -80,7 +80,7 @@
 
   &__info {
     margin-block: $space-sm;
-    white-space: nowrap;
+    white-space: wrap;
   }
 
   &__filter {
