--- a/src/styles/layouts/_catalog-filter.scss
+++ b/src/styles/layouts/_catalog-filter.scss
@@ -6,6 +6,8 @@
 
   @include desktop {
     display: flex;
+    width: auto;
+    max-width: 217px;
   }
 
   &.is-shown {
@@ -79,7 +81,6 @@
   &__button-lower {
     display: flex;
     align-items: center;
-    height: 96px;
     width: 100%;
     background-color: $color-white;
     padding: $space-base;
@@ -94,8 +95,9 @@
   }
 
   &__button {
+    padding-block: 8px;
+    padding-inline: 20px;
     width: 100%;
-    height: 40px;
   }
 
   &__form {
