--- a/src/styles/layouts/_catalog.scss
+++ b/src/styles/layouts/_catalog.scss
@@ -51,6 +51,7 @@
 
   &__tags {
     display: flex;
+    flex-wrap: wrap;
     gap: $gap-sm;
   }
 
