--- a/src/styles/layouts/_hero-catalog.scss
+++ b/src/styles/layouts/_hero-catalog.scss
@@ -2,7 +2,6 @@
 @use "../abstracts/mixins" as *;
 
 .hero-catalog {
-  height: 288px;
   display: flex;
   align-items: center;
 
