--- a/src/styles/layouts/_trending.scss
+++ b/src/styles/layouts/_trending.scss
@@ -3,16 +3,6 @@
 
 .trending {
   margin-top: $space-3xl;
-  padding-left: 16px;
-
-  @include tablet {
-    margin-top: 100px;
-    padding-left: 40px;
-  }
-
-  @include desktop {
-    padding-inline: 80px;
-  }
 
   &__primary-title {
     margin-bottom: $space-base;
